Single entry login page

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/FindUser.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/FindUser.cshtml
@@ -29,13 +29,12 @@
         </div>
 
         <div class="d-grid gap-2">
-            <abp-button type="submit" button-type="Secondary" formnovalidate="formnovalidate" name="Action" value="Cancel" class="btn-lg mt-3">
-                @L["Back"]
-            </abp-button>
-
-            <abp-button type="submit" button-type="Primary" name="Action" value="SelectionStep" class="btn-lg mt-3">
+            <abp-button type="submit" button-type="Primary" name="Action" value="Selection" class="btn-lg mt-3">
                 @L["Continue"]
                 <span class="spinner-box"></span>
+            </abp-button>
+            <abp-button type="submit" button-type="Secondary" formnovalidate="formnovalidate" name="Action" value="Cancel" class="btn-lg mt-3">
+                @L["Back"]
             </abp-button>
         </div>
     </form>
@@ -61,7 +60,7 @@ else
         }
 
         <div class="d-grid gap-2">
-            <abp-button type="submit" button-type="Primary" name="Action" value="InputStep" class="btn-block btn-lg mt-3">
+            <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="btn-block btn-lg mt-3">
                 @L["Continue"]
                 <span class="spinner-box"></span>
             </abp-button>
