--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/Register.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/Register.cshtml
@@ -14,50 +14,23 @@
 </h4>
 
 <div class="progress">
-    <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 0%"></div>
+    <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 33%"></div>
 </div>
 
-<div id="qbox-container">
 
-    <form class="needs-validation" id="form-wrapper" method="post" name="form-wrapper" novalidate="">
-        <div id="steps-container" class="py-4">
-            <div class="step w-100 d-none">
-                <h5 class="mb-4">
-                    First, please provide your organization information as below
-                </h5>
+<form method="post" class="py-4">
+    <h5 class="mb-4">
+        <span class="badge bg-dark me-1">1/3</span>
+        First, please provide your organization information as below
+    </h5>
 
-                <abp-input asp-for="Input.TenantName" auto-focus="true" />
-            </div>
+    <abp-input asp-for="Input.TenantName" auto-focus="true" />
 
-            <div class="step w-100 d-none">
-                <h5 class="mb-4">
-                    Next, please provide the administrator information
-                </h5>
+    <div class="d-grid gap-2">
+        <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="btn-lg mt-3">
+            @L["Continue"]
+            <span class="spinner-box"></span>
+        </abp-button>
+    </div>
 
-                <abp-input asp-for="Input.AdminEmailAddress" auto-focus="true" />
-
-                <abp-input asp-for="Input.Password" />
-
-                <abp-input asp-for="Input.ConfirmPassword" />
-
-                @if (Model.IsRecaptchaEnabled)
-                {
-                    <div class="mb-3">
-                        @Html.ReCaptcha()
-                    </div>
-                }
-
-            </div>
-        </div>
-
-        <div id="q-box__buttons" class="d-grid gap-2">
-            <button id="prev-btn" type="button" class="btn btn-info">Previous</button>
-            <button id="next-btn" type="button" class="btn btn-primary">Next</button>
-            <button id="submit-btn" type="submit" name="Action" value="Input" class="btn btn-primary">
-                Submit
-                <span class="spinner-box"></span>
-            </button>
-        </div>
-    </form>
-
-</div>
+</form>
