--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ForgotPassword.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ForgotPassword.cshtml
@@ -9,6 +9,11 @@
 @model PolpAbp.Presentation.Account.Web.Pages.Account.ForgotPasswordModel
 @inject IHtmlLocalizer<AccountResource> L
 
+@{
+    ViewBag.Title = "Resets Your Password";
+    ViewBag.Description = "Requests to get a password reset link if you forgets your password.";
+}
+
 <h4 class="mb-4 fw-semibold">
     @L["ForgotPassword"]
 </h4>
