--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/PasswordResetLinkSent.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/PasswordResetLinkSent.cshtml
@@ -8,6 +8,10 @@
 @using AspNetCore.ReCaptcha
 @model PolpAbp.Presentation.Account.Web.Pages.Account.PasswordResetLinkSentModel
 @inject IHtmlLocalizer<AccountResource> L
+@{
+    ViewBag.Title = "Password Reset Result";
+    ViewBag.Description = "Displays the result after you resets your password.";
+}
 
 <h4 class="mb-4 fw-semibold">
     @L["ForgotPassword"]
