--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/RegisterConfirm.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/RegisterConfirm.cshtml
@@ -9,6 +9,11 @@
 @model PolpAbp.Presentation.Account.Web.Pages.Account.RegisterConfirmModel
 @inject IHtmlLocalizer<AccountResource> L
 
+@{
+    ViewBag.Title = "Confirms to Create Organization Account";
+    ViewBag.Description = "Reviews the information of your organization confirm to create your organization account.";
+}
+
 <h4 class="mb-4 fw-semibold">
     Create your organization
 </h4>
