--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/RegisterSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/RegisterSuccess.cshtml
@@ -9,6 +9,11 @@
 @model PolpAbp.Presentation.Account.Web.Pages.Account.RegisterSuccessModel
 @inject IHtmlLocalizer<AccountResource> L
 
+@{
+    ViewBag.Title = "Organization Registration Success Message";
+    ViewBag.Description = "Displays the success message after your organization has been created.";
+}
+
 <h4 class="mb-4 fw-semibold">
     Registration Success
 </h4>
