--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -9,6 +9,11 @@
 @model PolpAbp.Presentation.Account.Web.Pages.Account.ResetPasswordConfirmationModel
 @inject IHtmlLocalizer<AccountResource> L
 
+@{
+    ViewBag.Title = "Password Reset Success Message";
+    ViewBag.Description = "Displays a success message after you have reset your password.";
+}
+
 <h4 class="mb-4 fw-semibold">
     @L["ResetPassword"]
 </h4>
