--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/Login.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/Login.cshtml
@@ -9,6 +9,11 @@
 @model PolpAbp.Presentation.Account.Web.Pages.Account.LoginModel
 @inject IHtmlLocalizer<AccountResource> L
 
+@{
+    ViewBag.Title = "Single Login Entry Point";
+    ViewBag.Description = "Redirects you to use the right login method, either the pair of your user name/email and password, or your SSO providers.";
+}
+
 <h4 class="mb-4 fw-semibold">
     Locating your information
 </h4>
