--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/Register.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/Register.cshtml
@@ -8,6 +8,10 @@
 @using AspNetCore.ReCaptcha
 @model PolpAbp.Presentation.Account.Web.Pages.Account.RegisterModel
 @inject IHtmlLocalizer<AccountResource> L
+@{
+    ViewBag.Title = "Organization Registration";
+    ViewBag.Description = "Creates your organization account, including setting up the organization administrator.";
+}
 
 <h4 class="mb-4 fw-semibold">
     Create your organization
