--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPassword.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPassword.cshtml
@@ -8,6 +8,10 @@
 @using AspNetCore.ReCaptcha
 @model PolpAbp.Presentation.Account.Web.Pages.Account.ResetPasswordModel
 @inject IHtmlLocalizer<AccountResource> L
+@{
+    ViewBag.Title = "Resets Your Passowrd";
+    ViewBag.Description = "Resets your password after you clicks the reset password link.";
+}
 
 <h4 class="mb-4 fw-semibold">
     @L["ResetPassword"]
