--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/LocalLogin.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/LocalLogin.cshtml
@@ -37,7 +37,7 @@
     else
     {
         <div class="mb-3">
-            <label class="form-label">@L["DisplayName:UserName"]</label>
+            <label class="form-label">@L["DisplayName:EmailAddress"]</label>
             <input asp-for="Input.UserNameOrEmailAddress" class="form-control" autocomplete="new-password">
             <span asp-validation-for="Input.UserNameOrEmailAddress" class="text-danger"></span>
         </div>
