Complete member registration flow

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
@@ -9,12 +9,12 @@
 @model PolpAbp.Presentation.Account.Web.Pages.Account.MemberRegisterModel
 @inject IHtmlLocalizer<AccountResource> L
 @{
-    ViewBag.Title = "Joins Into Your Organization";
+    ViewBag.Title = "Register For Your Organization";
     ViewBag.Description = "Becomes a member of your organization.";
 }
 
 <h4 class="mb-4 fw-semibold">
-    Join Into Your Organization
+    Register For Your Organization
 </h4>
 
 <div class="alert alert-info d-flex align-items-center" role="alert">
