--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/Register.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/Register.cshtml
@@ -28,7 +28,7 @@
         First, please provide your organization information as below
     </h5>
 
-    <abp-input asp-for="Input.TenantName" auto-focus="true" />
+    <abp-input asp-for="Input.TenantName" auto-focus="true" autocomplete="organization" />
 
     <div class="d-grid gap-2">
         <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="btn-lg mt-3">
