--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
@@ -25,20 +25,20 @@
 
 <form method="post">
 
-    <abp-input asp-for="Input.FirstName" />
-    <abp-input asp-for="Input.LastName" />
-    <abp-input asp-for="Input.EmailAddress" />
+    <abp-input asp-for="Input.FirstName" autocomplete="given-name" />
+    <abp-input asp-for="Input.LastName" autocomplete="family-name" />
+    <abp-input asp-for="Input.EmailAddress" autocomplete="email" />
     <div class="mb-3" id="password-wrapper">
         <label for="Input_Password" class="form-label">@L["DisplayName:Password"]</label>
         <div class="input-group">
-            <input class="form-control" id="Input_Password" type="password" autocomplete="off" asp-for="Input.Password" />
+            <input class="form-control" id="Input_Password" type="password" autocomplete="new-password" asp-for="Input.Password" />
             <button type="button" class="toggle-password btn btn-outline-secondary">
                 <i class="toggle-icon far fa-eye"></i>
             </button>
         </div>
         <span asp-validation-for="Input.Password" class="text-danger"></span>
     </div>
-    <abp-input asp-for="Input.ConfirmPassword" />
+    <abp-input asp-for="Input.ConfirmPassword" autocomplete="off" />
 
     <div class="d-grid gap-2">
         <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="btn-lg mt-3">
